# GentlrSSG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.toml  main.cpp  readme.md
.github/workflows/: build-release.yml  cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
pages/: aaa.md  gentlr.md  test1.md  test2.md
src/: CMakeLists.txt  HTMLTemplate.cpp  HTMLTemplate.hpp  config.cpp  config.hpp  htmlTemplate.cpp  htmlTemplate.hpp  navigation.cpp  navigation.hpp  page.cpp  page.hpp  site.cpp  site.hpp  siteBuilder.cpp  siteBuilder.hpp  template.cpp  template.hpp  utils.hpp
src/utils/: author.hpp  link.hpp  site.hpp
templates/default/: base.html
templates/default/css/: fonts.css  styles.css
templates/default/html/: base.html
templates/default/js/: script.js
